--- a/db/printing/invoice.liquid
+++ b/db/printing/invoice.liquid
@@ -46,7 +46,9 @@
 
 <div style="padding: 8px; border: 2px solid #ccc;">
   {{ shipping_address.name }}<br/>
-  {{ shipping_address.company }}<br/>
+  {% if shipping_address.company %}
+    {{ shipping_address.company }}<br/>
+  {% endif %}
   {{ shipping_address.street }}<br/>
   {{ shipping_address.city }}
   {{ shipping_address.province }}
