--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,9 +1,10 @@
 <% form_remote_for(tmpl, :method => method, :html => {:id => "print-template-form"}, :loading => "Status.show()", :complete => "Status.hide();") do |f| %>
   <div class="rollback fixed">
-    <%= rollback_link(tmpl.name) %>
-    <%= select_tag 'rollback-selectbox', [], :style => "display: none" %> |
+    <% if method.to_sym != :post %>
+      <%= rollback_link(tmpl.name) %>
+      <%= select_tag 'rollback-selectbox', [], :style => "display: none" %> |
+    <% end %>
     <%= link_to "Show help", "http://wiki.shopify.com/PixelPrinter#Template_editing", :target => 'wiki', :class => 'normal-link' %>
-    
   </div>
   <div class="header fixed">
     <%= f.label :name, "Name:" %>
@@ -22,7 +23,9 @@
   </div>
 <% end %>
 
-<%= observe_field 'rollback-selectbox', 
+<% if method.to_sym != :post %>
+  <%= observe_field 'rollback-selectbox', 
       :url    => { :action => :rollback_template },
       :with   => "'template_version=' + value + '&template_name=#{tmpl.name}'", 
       :before => "$('#template_editor').val('Loading your template...');" %>
+<% end %>
