--- a/db/printing/variable_reference.liquid
+++ b/db/printing/variable_reference.liquid
@@ -24,8 +24,10 @@
 {{ shipping_address.street }}<br/>
 {{ shipping_address.city }}
 {{ shipping_address.province }}
+({{ shipping_address.province_code }})
 {{ shipping_address.zip | upcase }}<br/>
-{{ shipping_address.country }}<br/>
+{{ shipping_address.country }}
+({{ shipping_address.country_code }})<br/>
 {{ shipping_address.phone }}<br/>
 
 
@@ -34,8 +36,10 @@
 {{ billing_address.street }}<br/>
 {{ billing_address.city }}
 {{ billing_address.province }}
+({{ billing_address.province_code }})
 {{ billing_address.zip | upcase }}<br/>
 {{ billing_address.country }}<br/>
+({{ billing_address.country_code }})<br/>
 {{ billing_address.phone }}<br/>
 
 
