--- a/test/data/example_print_template.liquid
+++ b/test/data/example_print_template.liquid
@@ -7,7 +7,7 @@
   <b>Order Number</b>:    {{order_number}}
 </p>
 
-<b>Gateway used</b>:    {{ gateway }}</br>
+<b>Gateway used</b>:    {{ gateway }}<br/>
 <b>Shipping method</b>: {{ shipping_method.title }}
 
 <table>
