ADDED: safe mode param which sanitizes the templates (e.g. removes inline javascript in case the template is borked and breaks the app). Also added basic tests for that.

--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -9,7 +9,11 @@
   </div>
   <div class="preview-wrapper">
     <div class="preview-content">
-      <%= rendered_template %>
+      <% if safe %>
+        <%= sanitize(rendered_template) %>
+      <% else %>
+        <%= rendered_template %>
+      <% end %>
     </div>
   </div> <!-- preview-wrapper -->
 
