--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -46,5 +46,6 @@
 
 <% content_for :javascript do %>
   Templates.initialize('<%= @order.id %>');
+  <% if @safe %>  Templates.safeMode();  <% end %>
   Templates.checkAll();
 <% end %>
